--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: ekart
-          image: admin/ekart:latest # Image that will be used to containers in the cluster
+          image: goognecs/ekart:latest # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8070 # The port that the container is running on in the cluster
